force-app/main/default/objects/FEC_Payment_History__c/FEC_Payment_History__c.object-meta.xml
<CustomObject>
    <label>Payment History</label>
    <nameField>
        <displayFormat>PHN - {0}</displayFormat>
        <label>Payment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>