force-app/main/default/objects/FEC_Payment_History__c/fields/FEC_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Booking_Date__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>