force-app/main/default/objects/FEC_Payment_History__c/fields/FEC_Particulars__c.field-meta.xml
<CustomField>
    <fullName>FEC_Particulars__c</fullName>
    <label>Particulars</label>
    <length>255</length>
    <type>Text</type>
</CustomField>