force-app/main/default/objects/FEC_Payment_History__c/fields/FEC_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>