force-app/main/default/objects/FEC_Payment_History__c/fields/FEC_Payment_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_Channel__c</fullName>
    <label>Payment Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>