force-app/main/default/objects/FEC_Payment_History__c/fields/FEC_Payment_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_No__c</fullName>
    <label>Payment No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>